--- a/.github/workflows/nishali-docker-ci.yaml
+++ b/.github/workflows/nishali-docker-ci.yaml
@@ -18,3 +18,9 @@ jobs:
           cat /etc/os-release
           docker version
           docker-compose version
+
+      - name: using pre-designed github workflow to get copy gitrepo code to runner machine
+        uses: actions/checkout@v4
+        
+      - name: verify github code
+        run: ls -a
