--- a/.github/workflows/nishali-docker-ci.yaml
+++ b/.github/workflows/nishali-docker-ci.yaml
@@ -21,6 +21,13 @@ jobs:
 
       - name: using pre-designed github workflow to get copy gitrepo code to runner machine
         uses: actions/checkout@v4
-        
+
       - name: verify github code
         run: ls -a
+      
+      - name: verify github code and use docker compose to build and create
+        run: |
+          ls -a
+          docker-compose up -d
+          sleep 2
+          docker-compose ps 
