--- a/.github/workflows/nishali-docker-ci.yaml
+++ b/.github/workflows/nishali-docker-ci.yaml
@@ -31,3 +31,8 @@ jobs:
           docker-compose up -d
           sleep 2
           docker-compose ps 
+
+      - name: verify health.html 
+        run: |
+          echo "Accessing health.html using curl"
+          curl -f http://localhost:1234/health.html
