--- a/.github/workflows/nishali-docker-ci.yaml
+++ b/.github/workflows/nishali-docker-ci.yaml
@@ -36,3 +36,13 @@ jobs:
         run: |
           echo "Accessing health.html using curl"
           curl -f http://localhost:1234/health.html
+
+      - name: try to login from runner to dockerhub account
+        uses: docker/login-action@v3 
+        with:
+          username: ${{ secret.DOCKERHUB_USERNAME }}
+          password: ${{ secret.DOCKERHUB_PASSWOR }}
+
+      - name: rebuild image in dockerhub format and push it to dockerhub 
+        run: |
+          echo "rebuilding docker image"
