--- a/.github/workflows/nishali-docker-ci.yaml
+++ b/.github/workflows/nishali-docker-ci.yaml
@@ -40,8 +40,8 @@ jobs:
       - name: try to login from runner to dockerhub account
         uses: docker/login-action@v3 
         with:
-          username: ${{ secret.DOCKERHUB_USERNAME }}
-          password: ${{ secret.DOCKERHUB_PASSWOR }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWOR }}
 
       - name: rebuild image in dockerhub format and push it to dockerhub 
         run: |
