--- a/.github/workflows/nishali-docker-ci.yaml
+++ b/.github/workflows/nishali-docker-ci.yaml
@@ -41,7 +41,7 @@ jobs:
         uses: docker/login-action@v3 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWOR }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: rebuild image in dockerhub format and push it to dockerhub 
         run: |
