--- a/.github/workflows/nishali-docker-ci.yaml
+++ b/.github/workflows/nishali-docker-ci.yaml
@@ -4,7 +4,7 @@ name: nishali app containerization pipelinbe
 on:
   push:
     branches:
-      - "main"
+      - "dev"
 
 #Jobs
 jobs:
@@ -44,7 +44,11 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: rebuild image in dockerhub format and push it to dockerhub 
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/BMO-WebUI
-          docker run ${{ secrets.DOCKERHUB_USERNAME }}/BMO-WebUI
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/BMO-WebUI
+        uses: docker/build-push-action@v5
+        with:
+          context: . #location of docker file
+          push: true
+          tags: docker.io/${{ rets.DOCKERHUB_USERNAME }}/nishbmo-ui:uiversion001
+
+      - name: logout from docker
+        run: docker logout
