--- a/.github/workflows/nishali-docker-ci.yaml
+++ b/.github/workflows/nishali-docker-ci.yaml
@@ -4,7 +4,7 @@ name: nishali app containerization pipelinbe
 on:
   push:
     branches:
-      - "dev"
+      - "dev1"
 
 #Jobs
 jobs:
@@ -18,10 +18,16 @@ jobs:
           cat /etc/os-release
           docker version
           docker-compose version
-          sonarqube-scanner --version
+          #sonarqube-scanner --version
 
       - name: using pre-designed github workflow to get copy gitrepo code to runner machine
         uses: actions/checkout@v4
+
+      #- name: SonarQube Scan
+      #  uses: sonarsource/sonarqube-scan-action@<action version> # Ex: v2.1.0, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
+      #  env:
+      #    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #    SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
       - name: verify github code
         run: ls -a
