--- a/.github/workflows/multi-job.yaml
+++ b/.github/workflows/multi-job.yaml
@@ -17,7 +17,7 @@ jobs:
           whoami
 
   sast-job:
-    runs-on: self-hosted
+    runs-on: windows-latest
     needs: code-check-job # it will wait for job1 to finish
     steps:
       - name: checking docker version and sonarscanner
