--- a/.github/workflows/multi-job.yaml
+++ b/.github/workflows/multi-job.yaml
@@ -33,6 +33,7 @@ jobs:
             .
             !**/.git*
             !**/*.md
+            !**/.scannerwork
 
   build-job:
     runs-on: ubuntu-latest
