--- a/.github/workflows/multi-job.yaml
+++ b/.github/workflows/multi-job.yaml
@@ -63,6 +63,13 @@ jobs:
           echo "using curl" 
           curl -f "http://localhost:1234/health.html"
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4 # More information on this action can be found below in the 'AWS Credentials' section
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
