--- a/.github/workflows/day4-cicd.yaml
+++ b/.github/workflows/day4-cicd.yaml
@@ -46,14 +46,25 @@ jobs:
       - name: Build an image from dockerfile
         run: |
           cd python-app-secret 
-          docker build -t nishalipython:bmov${{ github.sha }} .
+          docker build -t docker.io/${{ secrets.DOCKERHUB_USERNAME }}nishalipython:bmov${{ github.sha }} .
 
       - name: trivy scanner
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: 'nishalipython:bmov${{ github.sha }}'
+          image-ref: 'docker.io/${{ secrets.DOCKERHUB_USERNAME }}nishalipython:bmov${{ github.sha }}'
           format: 'table'
           exit-code: '0'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
+
+      - name: login to dockerhub
+        uses: docker/login-action@v3 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: pushing image to docker hub 
+        run: |
+          echo "please wait while image is getting pushed"
+          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalipython:bmov${{ github.sha }}
