dockerhub push image

--- a/.github/workflows/day4-cicd.yaml
+++ b/.github/workflows/day4-cicd.yaml
@@ -67,4 +67,4 @@ jobs:
       - name: pushing image to docker hub 
         run: |
           echo "please wait while image is getting pushed"
-          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalipython:bmov${{ github.sha }}
+          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}nishalipython:bmov${{ github.sha }}
