--- a/.github/workflows/day4-cicd.yaml
+++ b/.github/workflows/day4-cicd.yaml
@@ -68,3 +68,10 @@ jobs:
         run: |
           echo "please wait while image is getting pushed"
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalipython:bmov${{ github.sha }}
+
+      - name: checking cdk version details 
+        run: |
+          node -v 
+          npm -v 
+          cdk --version 
+          aws --version 
