--- a/.github/workflows/day4-cicd.yaml
+++ b/.github/workflows/day4-cicd.yaml
@@ -69,9 +69,13 @@ jobs:
           echo "please wait while image is getting pushed"
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalipython:bmov${{ github.sha }}
 
-      - name: checking cdk version details 
+      - name: installing node 20 
+        uses: actions/setup-node@v2 
+        with:
+          node-version: '20'
+
+      - name: install npm modules for ecs 
         run: |
           node -v 
-          npm -v 
-          cdk --version 
-          aws --version 
+          cd nishali-ecs
+          npm install 
