--- a/.github/workflows/day4-cicd.yaml
+++ b/.github/workflows/day4-cicd.yaml
@@ -79,3 +79,16 @@ jobs:
           node -v 
           cd nishali-ecs
           npm install 
+
+      - name: setup aws login details 
+        uses: aws-actions/configure-credentials@v4 
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: cdk deploy ecs code 
+        run: |
+          cd nishali-esc 
+          npx cdk bootstrap 
+          npx cdk deploy --no-rollback --require-approval never 
