--- a/.github/workflows/day4-cicd.yaml
+++ b/.github/workflows/day4-cicd.yaml
@@ -89,5 +89,6 @@ jobs:
 
       - name: cdk deploy ecs code 
         run: |
+          cd nishali-ecs
           npx cdk bootstrap 
           npx cdk deploy --no-rollback --require-approval never 
