--- a/.github/workflows/day4-cicd.yaml
+++ b/.github/workflows/day4-cicd.yaml
@@ -92,3 +92,4 @@ jobs:
           cd nishali-ecs
           npx cdk bootstrap 
           npx cdk deploy --no-rollback --require-approval never 
+          npx cdk destroy --force
