--- a/.github/workflows/day4-cicd.yaml
+++ b/.github/workflows/day4-cicd.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: verify github code and use docker compose to build and create
         run: |
           ls -a 
-          cd python-app-secret 
+        #  cd python-app-secret 
           docker-compose up -d 
           sleep 2
           docker-compose ps 
@@ -46,13 +46,13 @@ jobs:
 
       - name: Build an image from Dockerfile
         run: |
-          cd python-app-secret
-          docker build -t docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalipython:bmov${{ github.sha }} .
+        #  cd python-app-secret
+          docker build -t docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalibmoweb:bmov${{ github.sha }} .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: 'docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalipython:bmov${{ github.sha }}'
+          image-ref: 'docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalibmoweb:bmov${{ github.sha }}'
           format: 'table'
           exit-code: '0' # exit code non zero terminate pipeline
           ignore-unfixed: true
@@ -68,7 +68,7 @@ jobs:
       - name: pushing image to docker hub 
         run: |
           echo "please wait while image is getting pushed"
-          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalipython:bmov${{ github.sha }}
+          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/nishalibmoweb:bmov${{ github.sha }}
 
       - name: upload artifacts 
         uses: actions/upload-artifact@v4
@@ -109,6 +109,5 @@ jobs:
 
       - name: cdk deploy ecs code 
         run: |
-          npx cdk bootstrap 
-          npx cdk deploy --no-rollback --require-approval never 
-          sleep 30
+          # npx cdk bootstrap 
+          npx cdk deploy --context imageTag=${{ github.sha }} --require-approval never 
