--- a/.github/workflows/day4-cicd.yaml
+++ b/.github/workflows/day4-cicd.yaml
@@ -111,3 +111,4 @@ jobs:
         run: |
           # npx cdk bootstrap 
           npx cdk deploy --context imageTag=${{ github.sha }} --require-approval never 
+          npx cdk destroy
